--- a/circles.css
+++ b/circles.css
@@ -1,9 +1,19 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 canvas {
   width: 100%;
-  background: slategray;
+  background: slategrey;
 }
 
 html, body {
   height: 100%;
-  margin: 0;
+}
+
+#myCanvas {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
